[package]
name = "graviex_api_client"
version = "0.1.0"
authors = ["cyberrumor <cyberrumor@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "*", features = ["https", "json-using-serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "*"
hmac = "*"
sha2 = "*"
hex = "*"
